<resources>
    <!-- General -->
    <string name="app_name">"  GPS Tracking"</string>
    <string name="err_email_missing">Please enter your email!</string>
    <string name="err_email_invalid">Email is invalid!</string>
    <string name="err_location_service_not_enabled">Please make sure your Location service is turned on!</string>
    <string name="go_to_location_settings">Settings</string>
    <string name="quit_app">Exit</string>

    <!-- Sign up activity -->
    <string name="activity_sign_up_title">Sign Up</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_password_retype_hint">Retype password</string>
    <string name="sign_up_email_hint">Your email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="sign_up_err_pass_invalid">Password must have at least 6 characters!</string>
    <string name="sign_up_err_pass_not_match">Password not match!</string>
    <string name="sign_up_err_dialog_title">Sign Up Error!</string>
    <string name="sign_up_status_creating_user">Creating user &#8230;</string>
    <string name="sign_up_status_logging_in">Logging in &#8230;</string>

    <!-- Login activity -->
    <string name="activity_login_title">Login</string>
    <string name="login_email_hint">Your email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_label">Login</string>
    <string name="login_button_label_pending">Logging in &#8230;</string>
    <string name="login_txt_signup">Don\'t have account? Sign up now!</string>
    <string name="login_err_dialog_title">Login Error!</string>
    <string name="login_err_password_missing">Please enter your password!</string>


    <!-- Main activity -->
    <string name="main_txt_active_user">User: %1$s</string>
    <string name="main_menu_logout">Log out</string>
    <string name="main_menu_open_map">Open Map</string>
    <string name="main_menu_about">About</string>
    <string name="main_menu_change_password">Change password</string>
    <string name="main_err_dialog_title">Error!</string>
    <string name="main_err_play_service">Google Play Service is not available!</string>
    <string name="main_btn_toggle_tracking">Start tracking</string>
    <string name="main_txt_distance_travelled">You\'ve travelled %1$s</string>

    <!-- Map Activity -->
    <string name="title_activity_maps">Map</string>
    <string name="map_menu_stop_tracking">Stop tracking</string>

    <!-- Change password Activity -->
    <string name="activity_change_password_title">Change password</string>
    <string name="change_pw_old_password_hint">Your old password</string>
    <string name="change_pw_new_password_hint">New password</string>
    <string name="change_pw_button_label">Change password</string>
    <string name="change_pw_err_dialog_title">Update Error!</string>
    <string name="change_pw_status_updating">Updating password &#8230;</string>
    <string name="change_pw_new_password_retype_hint">Retype new password</string>
    <string name="change_pw_err_missing_old_password">Please enter your old password!</string>
    <string name="change_pw_err_missing_new_password">Please enter your new password!</string>
    <string name="change_pw_err_new_password_mismatch">New passwords not match!</string>

    <!-- Info Activity -->
    <string name="activity_info_title">About</string>
    <string name="info_image">GPS Tracking Image</string>
    <string name="info_txt_app_name">GPS Tracking 0.1.0</string>
    <string name="info_author_name">Copyright 2016 - %1$s</string>
    <string name="info_author_email">Email: %1$s</string>
    <string name="info_author_phone">Phone number: %1$s</string>
    <string name="info_app_description">Ứng dụng giám sát hành trình theo thời gian thực sử dụng Firebase, Google Location và Google Maps.</string>

</resources>
