<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item
        android:id="@+id/main_menu_logout"
        android:title="@string/main_menu_logout"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_change_password"
        android:title="@string/main_menu_change_password"
        android:orderInCategory="90"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_menu_about"
        android:title="@string/main_menu_about"
        android:orderInCategory="120"
        app:showAsAction="never" />





</menu>