<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="example.makatz.gpstracking1.LoginActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_edt_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/btn_text"
        android:hint="@string/login_email_hint"
        android:layout_marginTop="70dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/btn_text"
        android:id="@+id/login_edt_password"
        android:inputType="textPassword"
        android:hint="@string/login_password_hint"
        android:layout_below="@+id/login_edt_email"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_btn"
        android:text="@string/login_button_label"
        android:background="@drawable/btn_selector"
        android:textColor="@color/btn_text"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_txt_signup"
        android:text="@string/login_txt_signup"
        android:layout_centerHorizontal="true"
        android:textColor="@color/btn_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:textSize="16sp"/>

</RelativeLayout>
